force-app/main/default/objects/GTCX_Service_Point__c/GTCX_Service_Point__c.object-meta.xml
<CustomObject>
    <label>Service Point</label>
    <pluralLabel>Service Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Service Point Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>