force-app/main/default/objects/GTCX_Service_Point__c/fields/GTCX_Annual_Consumption__c.field-meta.xml
<CustomField>
    <fullName>GTCX_Annual_Consumption__c</fullName>
    <label>Annual Consumption</label>
    <type>Text</type>
    <length>255</length>
</CustomField>