force-app/main/default/objects/GTCX_Service_Point__c/fields/GTCX_Company_Number__c.field-meta.xml
<CustomField>
    <fullName>GTCX_Company_Number__c</fullName>
    <label>Company Number</label>
    <type>Text</type>
    <length>255</length>
</CustomField>