force-app/main/default/objects/GTCX_Service_Point__c/fields/GTCX_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>GTCX_Contact_Email__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>