force-app/main/default/objects/GTCX_Service_Point__c/fields/GTCX_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>GTCX_Contact_Name__c</fullName>
    <label>Contact Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>