force-app/main/default/objects/GTCX_Service_Point__c/fields/GTCX_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>GTCX_Contact_Phone__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>