force-app/main/default/objects/GTCX_Service_Point__c/fields/GTCX_Duration_Options__c.field-meta.xml
<CustomField>
    <fullName>GTCX_Duration_Options__c</fullName>
    <label>Duration Options</label>
    <type>Text</type>
    <length>255</length>
</CustomField>