force-app/main/default/objects/GTCX_Service_Point__c/fields/GTCX_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>GTCX_Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>