force-app/main/default/objects/GTCX_Service_Point__c/fields/GTCX_Market_Identifier__c.field-meta.xml
<CustomField>
    <fullName>GTCX_Market_Identifier__c</fullName>
    <label>Market Identifier</label>
    <type>Text</type>
    <length>255</length>
</CustomField>