force-app/main/default/objects/GTCX_Service_Point__c/fields/GTCX_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>GTCX_Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Service Points</relationshipLabel>
    <relationshipName>Service_Points</relationshipName>
</CustomField>