force-app/main/default/objects/GTCX_Service_Point__c/fields/GTCX_Postcode__c.field-meta.xml
<CustomField>
    <fullName>GTCX_Postcode__c</fullName>
    <description>Service Point Postcode</description>
    <label>GTCX Postcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>