force-app/main/default/objects/GTCX_Service_Point__c/fields/GTCX_Product_Preference__c.field-meta.xml
<CustomField>
    <fullName>GTCX_Product_Preference__c</fullName>
    <label>Product Preference</label>
    <type>Text</type>
    <length>255</length>
</CustomField>